--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1347,6 +1347,25 @@ Details on the exact range of values that the mock data can take on can be found
    Expected: Appointment is not added because of the missing salutation for Doctor.
 // end::addappttests[]
 
+//tag::adddiettests[]
+=== Adding dietary requirements for a patient
+
+. Adds dietary requirements for a checked in patient
+
+.. Prerequisites: Select a patient in the app using the `select` command. If there are no patients to be selected, add a new patient using the `register` command. Let this selected patient's NRIC be denoted by `$nric`. The test cases must be executed in the sequence listed.
+.. Test case: `adddiet ic/$nric alg/Egg alg/Milk cr/Halal pd/Hands cannot move.`
+   Expected: Dietary requirements are added for patient. To verify, run `view diets`.
+.. Test case: `adddiet ic/$nric cr/Vegetarian`
+   Expected: Dietary requirement is added for patient. To verify, run `view diets`.
+.. Test case: `adddiet ic/$nric alg/Egg`
+   Expected: No new dietary requirement is added, since the new allergy has been added before.
+.. Test case: `adddiet ic/$nric pd/1 hand cannot move.`
+   Expected: Dietary requirement is not added due to the invalid input.
+.. Test case: `adddiet ic/$nric alg/Fish cr/`
+   Expected: Dietary requirement is not added due to the invalid `cr` input.
+//end::adddiettests[]
+
+
 === Adding medication for a patient
 
 . Adding medication for a given patient
@@ -1426,6 +1445,34 @@ Details on the exact range of values that the mock data can take on can be found
    Expected: The view remains unsorted. An error message is shown.
 .. Test case: `sort a` +
    Expected: The view remains unsorted. An error message is shown.
+
+//tag::checkintests[]
+=== Checking out a patient
+
+. Checking out a patient who is in the system
+
+.. Prerequisites: A patient is registered and checked in to the system, and is visible on the left panel. Let `$nric` denotes this patient's NRIC. Let `$nricOther` denotes an NRIC of a patient who is not registered in the system. The test cases must be executed in the sequence listed.
+.. Test case: `checkout ic/$nricOther`
+   Expected: The patient is not checked out. Error detail shown in the status message.
+.. Test case: `checkout ic/$nric`
+   Expected: The patient with `$nric` is checked out.
+.. Test case: `checkout ic/$nric`
+   Expected: The patient is not checked out. Error detail shown in the status message.
+//end::checkintests[]
+
+//tag::checkouttests[]
+=== Checking in a patient
+
+. Checking in a previously checked out patient
+
+.. Prerequisites: A patient is registered and previously checked out from the system. Let `$nric` denotes this patient's NRIC. Let `$nricOther` denotes an NRIC of a patient who is not registered in the system. The test cases must be executed in the sequence listed.
+.. Test case: `checkin ic/$otherNric`
+   Expected: The patient is not checked in. Error detail shown in the status message.
+.. Test case: `checkin ic/$nric`
+   Expected: The patient with `$nric` is checked in.
+.. Test case: `checkin ic/$nric`
+   Expected: The patient is not checked in. Error detail shown in the status message.
+//end::checkouttests[]
 
 === Generating data
 
