--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -37,11 +37,11 @@ Responsibilities: TBD +
 '''
 
 === Jefferson Sie
-image::jeffypie369.jpg[width="150", align="left"]
+image::jeffypie369.png[width="150", align="left"]
 {empty}[http://github.com/jeffypie369[github]] [<<jeffypie369#, portfolio>>]
 
-Role: Developer +
-Responsibilities: TBD +
+Role: Developer + Bug Tester +
+Responsibilities: In charge of testing for bugs +
 
 '''
 
