--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -801,7 +801,7 @@ public CommandResult execute(Model model, CommandHistory history) throws Command
 *** The new `Person` object is updated to the model by `Model#updatePerson` method.
 *** A new CommandResult object is returned and the execution ends.
 
-below is `visitorin` sequence diagram (Figure 1):
+Below is `visitorin` sequence diagram (Figure 1):
 
 .`visitorin` sequence diagram
 image::VisitorinSequenceDiagram.png[width="800"]
@@ -811,7 +811,7 @@ image::VisitorinSequenceDiagram.png[width="800"]
 ** `ViewvisitorsCommand` retrieves the person with the required patient's ic and construct a copy of selected patient's VisitorList for display
 *** A new CommandResult object is returned and the execution ends.
 
-below is `viewvisitor` sequence diagram (Figure 2):
+Below is `viewvisitor` sequence diagram (Figure 2):
 
 .`viewvisitor` sequence diagram
 image::ViewvisitorsSequenceDiagram.png[width="800"]
@@ -847,7 +847,7 @@ public CommandResult execute(Model model, CommandHistory history) throws Command
 *** The new `Person` object is updated to the model by `Model#updatePerson` method.
 *** A new CommandResult object is returned and the execution ends.
 
-below is `visitorout` sequence diagram (Figure 3):
+Below is `visitorout` sequence diagram (Figure 3):
 
 .`visitorout` sequence diagram
 image::VisitoroutSequenceDiagram.png[width="800"]
