--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1506,11 +1506,11 @@ Details on the exact range of values that the mock data can take on can be found
 
 .. Prerequisites: A patient is registered and checked in to the system, and is visible on the left panel. Let `$nric` denotes this patient's NRIC. Let `$nricOther` denotes an NRIC of a patient who is not registered in the system. The test cases must be executed in the sequence listed.
 .. Test case: `checkout ic/$nricOther`
-   Expected: The patient is not checked out. Error detail shown in the status message.
+   Expected: The command fails. Error detail shown in the status message.
 .. Test case: `checkout ic/$nric`
    Expected: The patient with `$nric` is checked out.
 .. Test case: `checkout ic/$nric`
-   Expected: The patient is not checked out. Error detail shown in the status message.
+   Expected: The command fails. Error detail shown in the status message.
 //end::checkintests[]
 
 //tag::checkouttests[]
@@ -1519,12 +1519,12 @@ Details on the exact range of values that the mock data can take on can be found
 . Checking in a previously checked out patient
 
 .. Prerequisites: A patient is registered and previously checked out from the system. Let `$nric` denotes this patient's NRIC. Let `$nricOther` denotes an NRIC of a patient who is not registered in the system. The test cases must be executed in the sequence listed.
-.. Test case: `checkin ic/$otherNric`
-   Expected: The patient is not checked in. Error detail shown in the status message.
+.. Test case: `checkin ic/$nricOther`
+   Expected: The command fails. Error detail shown in the status message.
 .. Test case: `checkin ic/$nric`
    Expected: The patient with `$nric` is checked in.
 .. Test case: `checkin ic/$nric`
-   Expected: The patient is not checked in. Error detail shown in the status message.
+   Expected: The command fails. Error detail shown in the status message.
 //end::checkouttests[]
 
 === Generating data
