--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -862,7 +862,7 @@ image::VisitoroutSequenceDiagram.png[width="800"]
 // tag::dataencryption[]
 === [Proposed] Data Encryption
 
-_{Explain here how the data encryption feature will be implemented}_
+Coming in V2.0.
 
 // end::dataencryption[]
 
@@ -1107,7 +1107,7 @@ Priorities: High (must have) - `* * \*`, Medium (nice to have) - `* \*`, Low (un
 |`* * *` | counter staff | view a patient's registered visitors | view the number of visitors for each patient at any one time
 |=======================================================================
 
-_{More to be added}_
+_{More to be added in V2.0}_
 
 [appendix]
 == Use Cases
@@ -1308,7 +1308,7 @@ Use case resumes at step 2.
 .  Patients information will be safely backed up every week.
 
 
-_{More to be added}_
+_{More to be added in V2.0}_
 
 [appendix]
 == Glossary
@@ -1348,7 +1348,7 @@ These instructions only provide a starting point for testers to work on; testers
 
 .. Download the jar file and copy into an empty folder
 .. Double-click the jar file +
-   Expected: Shows the GUI with a set of sample contacts. The window size may not be optimum.
+   Expected: Shows the GUI with a set of sample patients. The window size may not be optimum.
 
 . Saving window preferences
 
@@ -1356,7 +1356,6 @@ These instructions only provide a starting point for testers to work on; testers
 .. Re-launch the app by double-clicking the jar file. +
    Expected: The most recent window size and location is retained.
 
-_{ more test cases ... }_
 
 // tag::gendata[]
 
@@ -1391,17 +1390,17 @@ Details on the exact range of values that the mock data can take on can be found
 . Adding an appointment for a checked in patient
 
 .. Prerequisites: Patient must not have an existing appointment at the same Date and Time
-.. Test case: `addappt ic/S1234567A type/SRG pn/Heart Bypass dt/27-04-2019 10:30 doc/Dr. Pepper`
+.. Test case: `addappt ic/S1234567A type/SRG pn/Heart Bypass dt/27-04-2019 10:30 doc/Dr. Pepper` +
    Expected: Appointment is added for patient. To verify, run `view appt`.
-.. Test case: `addappt ic/S1234567 type/SRG pn/Heart Bypass dt/27-04-2019 10:30 doc/Dr. Pepper`
+.. Test case: `addappt ic/S1234567 type/SRG pn/Heart Bypass dt/27-04-2019 10:30 doc/Dr. Pepper` +
    Expected: Appointment is not added due to the invalid NRIC input.
-.. Test case: `addappt ic/S1234567A type/SRG pn/Heart Bypass dt/27-04-2019 10:30 doc/Dr. Pepper` (after (b) has been run)
+.. Test case: `addappt ic/S1234567A type/SRG pn/Heart Bypass dt/27-04-2019 10:30 doc/Dr. Pepper` (after (b) has been run) +
    Expected: Appointment is not added due to the duplicate Date and Time from an existing appointment.
-.. Test case: `addappt ic/S1234567A type/apple pn/Heart Bypass dt/27-04-2019 10:30 doc/Dr. Pepper`
+.. Test case: `addappt ic/S1234567A type/apple pn/Heart Bypass dt/27-04-2019 10:30 doc/Dr. Pepper` +
    Expected: Appointment is not added due to the invalid Type input.
-.. Test case: `addappt ic/S1234567A type/SRG pn/123 dt/27-04-2019 10:30 doc/Dr. Pepper`
+.. Test case: `addappt ic/S1234567A type/SRG pn/123 dt/27-04-2019 10:30 doc/Dr. Pepper` +
    Expected: Appointment is not added because Procedure Name must only consist of alphabets.
-.. Test case: `addappt ic/S1234567A type/SRG pn/Heart Bypass dt/27-04-2019 10:30 doc/Pepper`
+.. Test case: `addappt ic/S1234567A type/SRG pn/Heart Bypass dt/27-04-2019 10:30 doc/Pepper` +
    Expected: Appointment is not added because of the missing salutation for Doctor.
 // end::addappttests[]
 
@@ -1410,16 +1409,16 @@ Details on the exact range of values that the mock data can take on can be found
 
 . Adding dietary requirements for a checked in patient
 
-.. Prerequisites: Select a patient in the app using the `select` command. If there are no patients to be selected, add a new patient using the `register` command. Let this selected patient's NRIC be denoted by `$nric`. The test cases must be executed in the sequence listed.
-.. Test case: `adddiet ic/$nric alg/Egg alg/Milk cr/Halal pd/Hands cannot move`
+.. Prerequisites: Select a patient in the app using the `select` command. If there are no patients to be selected, add a new patient using the `register` command. Let this selected patient's NRIC be denoted by `$nric`. The test cases must be executed in the sequence listed. +
+.. Test case: `adddiet ic/$nric alg/Egg alg/Milk cr/Halal pd/Hands cannot move` +
    Expected: Dietary requirements are added for patient. To verify, run `view diets`.
-.. Test case: `adddiet ic/$nric cr/Vegetarian`
+.. Test case: `adddiet ic/$nric cr/Vegetarian` +
    Expected: Dietary requirement is added for patient. To verify, run `view diets`.
-.. Test case: `adddiet ic/$nric alg/Egg`
+.. Test case: `adddiet ic/$nric alg/Egg` +
    Expected: No new dietary requirement is added, since the new allergy has been added before.
-.. Test case: `adddiet ic/$nric pd/1 hand cannot move.`
+.. Test case: `adddiet ic/$nric pd/1 hand cannot move.` +
    Expected: Dietary requirement is not added due to the invalid input.
-.. Test case: `adddiet ic/$nric alg/Fish cr/`
+.. Test case: `adddiet ic/$nric alg/Fish cr/` +
    Expected: Dietary requirement is not added due to the invalid `cr` input.
 //end::adddiettests[]
 
@@ -1469,6 +1468,41 @@ Details on the exact range of values that the mock data can take on can be found
 .. Test case: `addmeds ic/$nric d/Paracetamol q/2 u/tablets n/4 t/AAA` +
    Expected: No prescription is added. Error details shown in the status message.
 
+=== Adding a diagnosis to a patient's medical record
+
+* Add diagnosis to a registered patient while all patients are listed.
+.. Prerequisites:
+*** Patient must be listed in the list on the panel on the left-hand side. Use the `list` command to list them, if there are no listed patients.
+*** Patient must be registered in AddressBook already.
+*** Enter the following commands to set up a test scenario with only one registered patient:
+. `clear`
+. `register ic/S1234567A n/John Doe p/98765432 e/johnd@example.com a/311, Clementi Ave 2, #02-25 da/aspirin da/insulin`
+
+.. Test case: `addmh ic/S1234567A mh/Patient has acute terminal stage brain cancer, refer to Dr.Zhang immediately. doc/Dr.Ross` +
+   Expected: Patient's diagnosis is successfully added.
+.. Test case: `addmh ic/ mh/Patient has acute terminal stage brain cancer, refer to Dr.Zhang immediately. doc/Dr.Ross` +
+   Expected: Failed addition, NRICs should consist of a starting letter (capital), followed by 7 numerical digits, followed by a letter (again capital). No such patient will exist.
+.. Test case: `addmh ic/S9876543Z mh/Patient has acute terminal stage brain cancer, refer to Dr.Zhang immediately. doc/Dr.Ross` +
+   Expected: Failed addition, patient is not registered, cannot add diagnosis for an unregistered patient.
+.. Test case: `addmh ic/A1234567Z mh/Patient has acute terminal stage brain cancer, refer to Dr.Zhang immediately. doc/Dr.Ross` +
+   Expected: NRICs should consist of a starting letter (capital), followed by 7 numerical digits, followed by a letter (again capital). No such patient will exist.
+.. Test case: `addmh ic/S12234598675667A mh/Patient has acute terminal stage brain cancer, refer to Dr.Zhang immediately. doc/Dr.Ross` +
+   Expected: Failed addition, NRICs should consist of a starting letter (capital), followed by 7 numerical digits, followed by a letter (again capital). No such patient will exist.
+.. Test case: `addmh ic/S1234567A mh/ doc/Dr.Ross` +
+   Expected: Failed addition, diagnosis should not be blank.
+.. Test case: `addmh ic/S1234567A mh/  doc/Dr.Ross` +
+   Expected: Failed addition, diagnosis should not be a whitespace.
+.. Test case: `addmh ic/S1234567A mh/!$!#!  doc/Dr.Ross` +
+   Expected: Patient's diagnosis is successfully added, diagnosis does not need to be made up of word letters.
+.. Test case: `addmh ic/S1234567A mh/Patient has acute terminal stage brain cancer, refer to Dr.Zhang immediately. doc/dr.Ross` +
+   Expected: Failed addition, doctor's title should precede his full name. The starting letter of all words in the doctor's title should be should be spelt out with capitalisation.
+.. Test case: `addmh ic/S1234567A mh/Patient has acute terminal stage brain cancer, refer to Dr.Zhang immediately. doc/Dr.Ross Geller Stuart Jack Ma Steve Bombamama Nojobs` +
+   Expected: Patient's diagnosis is successfully added as doctor's name is valid.
+.. Test case: `addmh ic/S1234567A mh/Patient has acute terminal stage brain cancer, refer to Dr.Zhang immediately. doc/` +
+   Expected: Failed addition, doctor's name should not be blank.
+.. Test case: `addmh ic/S1234567A mh/Patient has acute terminal stage brain cancer, refer to Dr.Zhang immediately. doc/` +
+   Expected: Failed addition, doctor's name cannot be a whitespace.
+
 === Changing the view
 
 . Changing the view (right-side panel of the UI)
@@ -1510,11 +1544,11 @@ Details on the exact range of values that the mock data can take on can be found
 . Checking out a patient who is in the system
 
 .. Prerequisites: A patient is registered and checked in to the system, and is visible on the left panel. Let `$nric` denotes this patient's NRIC. Let `$nricOther` denotes an NRIC of a patient who is not registered in the system. The test cases must be executed in the sequence listed.
-.. Test case: `checkout ic/$nricOther`
+.. Test case: `checkout ic/$nricOther` +
    Expected: The command fails. Error detail shown in the status message.
-.. Test case: `checkout ic/$nric`
+.. Test case: `checkout ic/$nric` +
    Expected: The patient with `$nric` is checked out.
-.. Test case: `checkout ic/$nric`
+.. Test case: `checkout ic/$nric` +
    Expected: The command fails. Error detail shown in the status message.
 //end::checkintests[]
 
@@ -1524,11 +1558,11 @@ Details on the exact range of values that the mock data can take on can be found
 . Checking in a previously checked out patient
 
 .. Prerequisites: A patient is registered and previously checked out from the system. Let `$nric` denotes this patient's NRIC. Let `$nricOther` denotes an NRIC of a patient who is not registered in the system. The test cases must be executed in the sequence listed.
-.. Test case: `checkin ic/$nricOther`
+.. Test case: `checkin ic/$nricOther` +
    Expected: The command fails. Error detail shown in the status message.
-.. Test case: `checkin ic/$nric`
+.. Test case: `checkin ic/$nric` +
    Expected: The patient with `$nric` is checked in.
-.. Test case: `checkin ic/$nric`
+.. Test case: `checkin ic/$nric` +
    Expected: The command fails. Error detail shown in the status message.
 //end::checkouttests[]
 
@@ -1546,38 +1580,4 @@ Details on the exact range of values that the mock data can take on can be found
 .. Test case: `gendata A` +
    Expected: No data is generated. An error message is shown.
 
-=== Adding a diagnosis to a patient's medical record
-
-* Add diagnosis to a registered patient while all patients are listed.
-.. Prerequisites:
-*** Patient must be listed in the list on the panel on the left-hand side. Use the `list` command to list them, if there are no listed patients.
-*** Patient must be registered in AddressBook already.
-*** Enter the following commands to set up a test scenario with only one registered patient:
-. `clear`
-. `register ic/S1234567A n/John Doe p/98765432 e/johnd@example.com a/311, Clementi Ave 2, #02-25 da/aspirin da/insulin`
-
-.. Test case: `addmh ic/S1234567A mh/Patient has acute terminal stage brain cancer, refer to Dr.Zhang immediately. doc/Dr.Ross` +
-   Expected: Patient's diagnosis is successfully added.
-.. Test case: `addmh ic/ mh/Patient has acute terminal stage brain cancer, refer to Dr.Zhang immediately. doc/Dr.Ross` +
-   Expected: Failed addition, NRICs should consist of a starting letter (capital), followed by 7 numerical digits, followed by a letter (again capital). No such patient will exist.
-.. Test case: `addmh ic/S9876543Z mh/Patient has acute terminal stage brain cancer, refer to Dr.Zhang immediately. doc/Dr.Ross` +
-   Expected: Failed addition, patient is not registered, cannot add diagnosis for an unregistered patient.
-.. Test case: `addmh ic/A1234567Z mh/Patient has acute terminal stage brain cancer, refer to Dr.Zhang immediately. doc/Dr.Ross` +
-   Expected: NRICs should consist of a starting letter (capital), followed by 7 numerical digits, followed by a letter (again capital). No such patient will exist.
-.. Test case: `addmh ic/S12234598675667A mh/Patient has acute terminal stage brain cancer, refer to Dr.Zhang immediately. doc/Dr.Ross` +
-   Expected: Failed addition, NRICs should consist of a starting letter (capital), followed by 7 numerical digits, followed by a letter (again capital). No such patient will exist.
-.. Test case: `addmh ic/S1234567A mh/ doc/Dr.Ross` +
-   Expected: Failed addition, diagnosis should not be blank.
-.. Test case: `addmh ic/S1234567A mh/  doc/Dr.Ross` +
-   Expected: Failed addition, diagnosis should not be a whitespace.
-.. Test case: `addmh ic/S1234567A mh/!$!#!  doc/Dr.Ross` +
-   Expected: Patient's diagnosis is successfully added, diagnosis does not need to be made up of word letters.
-.. Test case: `addmh ic/S1234567A mh/Patient has acute terminal stage brain cancer, refer to Dr.Zhang immediately. doc/dr.Ross` +
-   Expected: Failed addition, doctor's title should precede his full name. The starting letter of all words in the doctor's title should be should be spelt out with capitalisation.
-.. Test case: `addmh ic/S1234567A mh/Patient has acute terminal stage brain cancer, refer to Dr.Zhang immediately. doc/Dr.Ross Geller Stuart Jack Ma Steve Bombamama Nojobs` +
-   Expected: Patient's diagnosis is successfully added as doctor's name is valid.
-.. Test case: `addmh ic/S1234567A mh/Patient has acute terminal stage brain cancer, refer to Dr.Zhang immediately. doc/` +
-   Expected: Failed addition, doctor's name should not be blank.
-.. Test case: `addmh ic/S1234567A mh/Patient has acute terminal stage brain cancer, refer to Dr.Zhang immediately. doc/` +
-   Expected: Failed addition, doctor's name cannot be a whitespace.
 
