--- a/docs/team/johndoe.adoc
+++ b/docs/team/johndoe.adoc
@@ -9,7 +9,7 @@
 
 == Overview
 
-HealthBase - Level 4 is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 10 kLoC.
+HealthBase - Level 4 is a desktop HealthBase application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 10 kLoC.
 
 == Summary of contributions
 
