--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1473,7 +1473,7 @@ Details on the exact range of values that the mock data can take on can be found
 * Add diagnosis to a registered patient while all patients are listed.
 .. Prerequisites:
 *** Patient must be listed in the list on the panel on the left-hand side. Use the `list` command to list them, if there are no listed patients.
-*** Patient must be registered in AddressBook already.
+*** Patient must be registered in HealthBase already.
 *** Enter the following commands to set up a test scenario with only one registered patient:
 . `clear`
 . `register ic/S1234567A n/John Doe p/98765432 e/johnd@example.com a/311, Clementi Ave 2, #02-25 da/aspirin da/insulin`
